--- a/Estudos/ConsoleApp1/ConsoleApp1.csproj
+++ b/Estudos/ConsoleApp1/ConsoleApp1.csproj
@@ -7,4 +7,8 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Estudos\Media\" />
+  </ItemGroup>
+
 </Project>
